@@ -1,3 +1,9 @@
+1999-03-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* acjdk.m4: Don't abort if JDK not found.
+	Abort if $jdkdir is specified (but not `no') and
+	$jdkdir/include/jni.h doesn't exist.
+
 1999-03-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* acjdk.m4: Set JAVAC if javac is missing, and jdkdir is not.
